Details
-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 2.2.0
-
None
-
Linux (64 bit), also Mac OS X (64 bit)
-
81177fab7b53e
Description
Open all files from $CREATORDIR/tests/manual/qml/testfiles/testfiles.qmlproject
Switch to Design mode hit Ctrl+W until all editors are closed, and do that rapidly.
Stacktrace:
0 raise /lib64/libc.so.6 0 0x7fa8f398dab5 1 abort /lib64/libc.so.6 0 0x7fa8f398efb6 2 qt_message_output qglobal.cpp 2282 0x7fa8f46ec1f8 3 qt_message(QtMsgType, const char *, typedef __va_list_tag __va_list_tag *) qglobal.cpp 2328 0x7fa8f46ec374 4 qFatal qglobal.cpp 2511 0x7fa8f46ecbe2 5 qt_assert qglobal.cpp 2027 0x7fa8f46ebdab 6 QmlDesigner::RewriterView::rewriterEndTransaction rewriterview.cpp 421 0x7fa8dd9e2961 7 QmlDesigner::Internal::ModelPrivate::notifyRewriterEndTransaction model.cpp 609 0x7fa8dda0537f 8 QmlDesigner::AbstractView::emitRewriterEndTransaction abstractview.cpp 423 0x7fa8dd9ca3f6 9 QmlDesigner::RewriterTransaction::commit rewritertransaction.cpp 64 0x7fa8dda696d2 10 QmlDesigner::PropertyEditorTransaction::timerEvent propertyeditortransaction.cpp 65 0x7fa8ddae27ac 11 QObject::event qobject.cpp 1181 0x7fa8f482e6eb 12 QApplicationPrivate::notify_helper qapplication.cpp 4462 0x7fa8f515bddc 13 QApplication::notify qapplication.cpp 3862 0x7fa8f5159400 14 QCoreApplication::notifyInternal qcoreapplication.cpp 731 0x7fa8f4815ebb 15 QCoreApplication::sendEvent qcoreapplication.h 215 0x7fa8f514ca17 16 QTimerInfoList::activateTimers qeventdispatcher_unix.cpp 604 0x7fa8f48522c5 17 timerSourceDispatch qeventdispatcher_glib.cpp 184 0x7fa8f484e50e 18 g_main_context_dispatch /lib64/libglib-2.0.so.0 0 0x7fa8f309cbd3 19 ?? /lib64/libglib-2.0.so.0 0 0x7fa8f309d3b0 20 g_main_context_iteration /lib64/libglib-2.0.so.0 0 0x7fa8f309d650 ... <More>
I augmented RewriterView::rewriterBeginTransaction, ::rewriterEndTransaction with some debugging output, and here is the log:
Starting /home/kkoehne/dev/creator/bin/qtcreator... QSqlDatabase: QSQLITE driver not loaded QSqlDatabase: available drivers: Warning: Failed to open settings database at "/home/kkoehne/.config/Nokia/QtCreator.db" ("Driver not loaded") QSqlDatabase: QSQLITE driver not loaded QSqlDatabase: available drivers: QSqlDatabase: QSQLITE driver not loaded QSqlDatabase: available drivers: QSqlDatabase: QSQLITE driver not loaded QSqlDatabase: available drivers: QSqlDatabase: QSQLITE driver not loaded QSqlDatabase: available drivers: QSqlDatabasePrivate::removeDatabase: connection 'GetNamespaceName-6380256-8' is still in use, all queries will cease to work. QSqlDatabase: QSQLITE driver not loaded QSqlDatabase: available drivers: QSqlDatabasePrivate::removeDatabase: connection 'GetNamespaceName-6380256-9' is still in use, all queries will cease to work. QSqlDatabase: QSQLITE driver not loaded QSqlDatabase: available drivers: QSqlDatabasePrivate::removeDatabase: connection 'GetNamespaceName-6380256-10' is still in use, all queries will cease to work. QSqlDatabase: QSQLITE driver not loaded QSqlDatabase: available drivers: QSqlDatabasePrivate::removeDatabase: connection 'GetNamespaceName-6380256-11' is still in use, all queries will cease to work. QSqlDatabase: QSQLITE driver not loaded QSqlDatabase: available drivers: QSqlDatabasePrivate::removeDatabase: connection 'GetNamespaceName-6380256-12' is still in use, all queries will cease to work. QSqlDatabase: QSQLITE driver not loaded QSqlDatabase: available drivers: QSqlDatabasePrivate::removeDatabase: connection 'GetNamespaceName-6380256-13' is still in use, all queries will cease to work. QSqlDatabase: QSQLITE driver not loaded QSqlDatabase: available drivers: QSqlDatabasePrivate::removeDatabase: connection 'GetNamespaceName-6380256-14' is still in use, all queries will cease to work. QSqlDatabase: QSQLITE driver not loaded QSqlDatabase: available drivers: QSqlDatabasePrivate::removeDatabase: connection 'GetNamespaceName-6380256-15' is still in use, all queries will cease to work. QSqlDatabase: QSQLITE driver not loaded QSqlDatabase: available drivers: QSqlDatabasePrivate::removeDatabase: connection 'GetNamespaceName-6380256-16' is still in use, all queries will cease to work. QSqlDatabase: QSQLITE driver not loaded QSqlDatabase: available drivers: QSqlDatabasePrivate::removeDatabase: connection 'GetNamespaceName-6380256-17' is still in use, all queries will cease to work. QSqlDatabase: QSQLITE driver not loaded QSqlDatabase: available drivers: QSqlDatabasePrivate::removeDatabase: connection 'GetNamespaceName-6380256-18' is still in use, all queries will cease to work. QSqlDatabase: QSQLITE driver not loaded QSqlDatabase: available drivers: QSqlDatabasePrivate::removeDatabase: connection 'GetNamespaceName-6380256-19' is still in use, all queries will cease to work. QSqlDatabase: QSQLITE driver not loaded QSqlDatabase: available drivers: QSqlDatabasePrivate::removeDatabase: connection 'GetNamespaceName-6380256-20' is still in use, all queries will cease to work. QSqlDatabase: QSQLITE driver not loaded QSqlDatabase: available drivers: QSqlDatabasePrivate::removeDatabase: connection 'GetNamespaceName-6380256-21' is still in use, all queries will cease to work. QSqlDatabase: QSQLITE driver not loaded QSqlDatabase: available drivers: QSqlDatabasePrivate::removeDatabase: connection 'GetNamespaceName-6380256-22' is still in use, all queries will cease to work. QSqlDatabase: QSQLITE driver not loaded QSqlDatabase: available drivers: QSqlDatabasePrivate::removeDatabase: connection 'GetNamespaceName-6380256-23' is still in use, all queries will cease to work. QSqlDatabase: QSQLITE driver not loaded QSqlDatabase: available drivers: QSqlDatabasePrivate::removeDatabase: connection 'GetNamespaceName-6380256-24' is still in use, all queries will cease to work. QSqlDatabase: QSQLITE driver not loaded QSqlDatabase: available drivers: QSqlDatabasePrivate::removeDatabase: connection 'GetNamespaceName-6380256-25' is still in use, all queries will cease to work. QSqlDatabase: QSQLITE driver not loaded QSqlDatabase: available drivers: QSqlDatabasePrivate::removeDatabase: connection 'GetNamespaceName-6380256-26' is still in use, all queries will cease to work. QSqlDatabase: QSQLITE driver not loaded QSqlDatabase: available drivers: QSqlDatabasePrivate::removeDatabase: connection 'GetNamespaceName-6380256-27' is still in use, all queries will cease to work. QSqlDatabase: QSQLITE driver not loaded QSqlDatabase: available drivers: QSqlDatabasePrivate::removeDatabase: connection 'GetNamespaceName-6380256-28' is still in use, all queries will cease to work. QSqlDatabase: QSQLITE driver not loaded QSqlDatabase: available drivers: QSqlDatabasePrivate::removeDatabase: connection 'GetNamespaceName-6380256-29' is still in use, all queries will cease to work. QSqlDatabase: QSQLITE driver not loaded QSqlDatabase: available drivers: QSqlDatabasePrivate::removeDatabase: connection 'GetNamespaceName-6380256-30' is still in use, all queries will cease to work. QSqlDatabase: QSQLITE driver not loaded QSqlDatabase: available drivers: QSqlDatabasePrivate::removeDatabase: connection 'GetNamespaceName-6380256-31' is still in use, all queries will cease to work. QSqlDatabase: QSQLITE driver not loaded QSqlDatabase: available drivers: QSqlDatabasePrivate::removeDatabase: connection 'GetNamespaceName-6380256-32' is still in use, all queries will cease to work. QSqlDatabase: QSQLITE driver not loaded QSqlDatabase: available drivers: QSqlDatabasePrivate::removeDatabase: connection 'GetNamespaceName-6380256-33' is still in use, all queries will cease to work. QSqlDatabase: QSQLITE driver not loaded QSqlDatabase: available drivers: QSqlDatabasePrivate::removeDatabase: connection 'GetNamespaceName-6380256-34' is still in use, all queries will cease to work. QSqlDatabase: QSQLITE driver not loaded QSqlDatabase: available drivers: QSqlDatabasePrivate::removeDatabase: connection 'GetNamespaceName-6380256-35' is still in use, all queries will cease to work. QSqlDatabase: QSQLITE driver not loaded QSqlDatabase: available drivers: QSqlDatabasePrivate::removeDatabase: connection 'GetNamespaceName-6380256-36' is still in use, all queries will cease to work. QSqlDatabase: QSQLITE driver not loaded QSqlDatabase: available drivers: QSqlDatabasePrivate::removeDatabase: connection 'GetNamespaceName-6380256-37' is still in use, all queries will cease to work. QSqlDatabase: QSQLITE driver not loaded QSqlDatabase: available drivers: QSqlDatabasePrivate::removeDatabase: connection 'GetNamespaceName-6380256-38' is still in use, all queries will cease to work. QSqlDatabase: QSQLITE driver not loaded QSqlDatabase: available drivers: QSqlDatabasePrivate::removeDatabase: connection 'GetNamespaceName-6380256-39' is still in use, all queries will cease to work. QSqlDatabase: QSQLITE driver not loaded QSqlDatabase: available drivers: QSqlDatabasePrivate::removeDatabase: connection 'GetNamespaceName-6380256-40' is still in use, all queries will cease to work. QSqlDatabase: QSQLITE driver not loaded QSqlDatabase: available drivers: QSqlDatabasePrivate::removeDatabase: connection 'GetNamespaceName-6380256-41' is still in use, all queries will cease to work. QSqlDatabase: QSQLITE driver not loaded QSqlDatabase: available drivers: QSqlDatabasePrivate::removeDatabase: connection 'GetNamespaceName-6380256-42' is still in use, all queries will cease to work. QSqlDatabase: QSQLITE driver not loaded QSqlDatabase: available drivers: QSqlDatabasePrivate::removeDatabase: connection 'GetNamespaceName-6380256-43' is still in use, all queries will cease to work. formLayerItem QGraphicsObject(0xd6c9e0, parent = 0x0, pos = QPointF(0, 0) , z = 1 , flags = ( ) ) manipulatorLayerItem QGraphicsObject(0x1ddeb50, parent = 0x0, pos = QPointF(0, 0) , z = 1 , flags = ( ) ) QmlDesigner: Log file is: "/tmp/qmldesigner-logger-2011-03-17T14-18-15-Z30777.txt" rewriterBeginTransaction QmlDesigner::RewriterView(0x1e72c70) 0 QmlDesigner: Log file is: "/tmp/qmldesigner-logger-2011-03-17T14-18-18-X30777.txt" qrc:/stateseditor/stateslist.qml:136:17: QML Image: Failed to get image from provider: image://qmldesigner_stateseditor/baseState-4 QmlDesigner: Log file is: "/tmp/qmldesigner-logger-2011-03-17T14-18-19-B30777.txt" qrc:/stateseditor/stateslist.qml:136:17: QML Image: Failed to get image from provider: image://qmldesigner_stateseditor/baseState-5 QmlDesigner: Log file is: "/tmp/qmldesigner-logger-2011-03-17T14-18-20-h30777.txt" qrc:/stateseditor/stateslist.qml:136:17: QML Image: Failed to get image from provider: image://qmldesigner_stateseditor/baseState-6 qrc:/stateseditor/stateslist.qml:136:17: QML Image: Failed to get image from provider: image://qmldesigner_stateseditor/1-7 qrc:/stateseditor/stateslist.qml:136:17: QML Image: Failed to get image from provider: image://qmldesigner_stateseditor/4-8 QmlDesigner: Log file is: "/tmp/qmldesigner-logger-2011-03-17T14-18-20-N30777.txt" No default property for node type "QtQuick.ListModel" , ignoring child items. qrc:/stateseditor/stateslist.qml:136:17: QML Image: Failed to get image from provider: image://qmldesigner_stateseditor/baseState-9 QmlDesigner: Log file is: "/tmp/qmldesigner-logger-2011-03-17T14-18-21-l30777.txt" qrc:/stateseditor/stateslist.qml:136:17: QML Image: Failed to get image from provider: image://qmldesigner_stateseditor/baseState-10 rewriterEndTransaction QmlDesigner::RewriterView(0x7fa8cc0b2eb0) -1 ASSERT: "transactionLevel >= 0" in file /home/kkoehne/dev/creator/src/plugins/qmldesigner/designercore/model/rewriterview.cpp, line 421 The program has unexpectedly finished.
Note that the number of rewriterBeginTransaction, rewriterEndTransaction calls match, but the RewriterView object has changed.
Attachments
Issue Links
- relates to
-
QTCREATORBUG-4459 Crash when closing Bauhaus
-
- Closed
-