QuickDesigner: Fix assert in rewriter when quickly closing files

Make sure that the transaction doesn't last across models.

Reviewed-by: Thomas Hartmann
Task-number: QTCREATORBUG-4136